--- a/training.html
+++ b/training.html
@@ -31,6 +31,7 @@
 
 <script>
     function message_click(){
+        // fetch("http://training.satyajeetsahu.com/training/what_is_my_name")
         fetch("http://localhost:40001/what_is_my_name")
         .then(response => response.json())
         .then(json => {
@@ -41,6 +42,7 @@
     }
 
     function square_click(){
+        // fetch("http://training.satyajeetsahu.com/training/return_square")
         fetch("http://localhost:40001/return_square",{
             method: "POST",
             body: JSON.stringify({
@@ -59,6 +61,7 @@
     }
 
     function bomb_click(){
+        // fetch("http://training.satyajeetsahu.com/training/blast_the_bomb")
         fetch("http://localhost:40001/blast_the_bomb")
         .then(response => response.json())
         .then(json => {
